# RL_from_scratch

./: .gitignore  Objectif.md  README.md  REGLES.md  pyproject.toml
configs/action_jepa/: halfcheetah.yaml  pendulum.yaml  pendulum_random_frozen.yaml  pendulum_smoke.yaml  (+3 more)
notebooks/: 01_tabular_rl_cartpole_walkthrough.ipynb  02_dqn_cartpole_walkthrough.ipynb  02b_rainbow_dqn_cartpole_walkthrough.ipynb  03_reinforce_cartpole_walkthrough.ipynb  04_a2c_halfcheetah_walkthrough.ipynb  05_a3c_halfcheetah_walkthrough.ipynb  06_trpo_ppo_halfcheetah_walkthrough.ipynb  07_ddpg_td3_halfcheetah_walkthrough.ipynb  08_sac_halfcheetah_walkthrough.ipynb  09_dyna_q_dyna_q_plus_deep_dyna_walkthrough.ipynb  10_pilco_walkthrough.ipynb  10b_deep_pilco_walkthrough.ipynb  11_pets_halfcheetah_walkthrough.ipynb  12_mbpo_halfcheetah_walkthrough.ipynb  13_dreamer_walkthrough.ipynb  14_muzero_discrete_control_walkthrough.ipynb  15_action_jepa_walkthrough.ipynb
tests/: __init__.py  conftest.py  test_action_jepa.py  test_actor_critic.py  test_architecture.py  test_artifacts.py  test_base.py  test_benchmark_protocol.py  test_config.py  test_config_registry.py  test_core_env.py  test_core_recording.py  test_core_schedules.py  test_deep.py  test_deterministic_actor_critic.py  test_discretization.py  test_dreamer.py  test_dyna.py  test_env.py  test_mbpo.py  test_muzero.py  test_normalization.py  test_pets.py  test_pilco.py  test_rainbow_dqn.py  test_reinforce.py  test_reporting.py  test_rollout.py  test_sac.py  test_tabular.py  test_training.py  test_trust_region.py  test_utils.py
(+183 files in other folders)
